--- a/app/src/main/res/layout/education_bottom_sheet_edit_layout.xml
+++ b/app/src/main/res/layout/education_bottom_sheet_edit_layout.xml
@@ -2,11 +2,13 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fillViewport="true">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:background="@color/background_white"
         android:padding="16dp">
 
         <!-- Header -->
@@ -51,6 +53,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textCapWords"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
                 android:maxLines="1" />
 
         </com.google.android.material.textfield.TextInputLayout>
