--- a/app/src/main/res/layout/fragment_activity_profile_view.xml
+++ b/app/src/main/res/layout/fragment_activity_profile_view.xml
@@ -31,7 +31,7 @@
                     android:layout_height="wrap_content">
 
                     <LinearLayout
-                        android:id="@+id/linearLayout6"
+                        android:id="@+id/linearLayout7"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
@@ -91,12 +91,91 @@
                         android:contentDescription="Edit this education"
                         android:scaleType="centerInside"
                         android:src="@drawable/ic_expand"
-                        app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
-                        app:layout_constraintEnd_toEndOf="@+id/linearLayout6"
+                        app:layout_constraintBottom_toBottomOf="@+id/linearLayout7"
+                        app:layout_constraintEnd_toEndOf="@+id/linearLayout7"
                         app:layout_constraintHorizontal_bias="1.0"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.0" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+            </com.google.android.material.card.MaterialCardView>
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/cardActiveUserActivity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="6dp"
+                app:cardBackgroundColor="@color/timer_background"
+                android:layout_marginBottom="32dp">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:id="@+id/linearLayout12"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:padding="32dp">
+
+                        <!-- Current Goal Display -->
+                       <LinearLayout
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content">
+                           <TextView
+                               android:id="@+id/tvActiveUsersActivity"
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:ellipsize="end"
+                               android:gravity="center"
+                               android:maxLines="2"
+                               android:text="Total Active Users: "
+                               android:textColor="@color/timer_text"
+                               android:textSize="22sp"
+                               android:textStyle="bold" />
+                           <TextView
+                               android:id="@+id/tvActiveUsersCountActivity"
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:ellipsize="end"
+                               android:gravity="center"
+                               android:maxLines="2"
+                               android:text="00"
+                               android:textColor="@color/primary_color"
+                               android:textSize="22sp"
+                               android:textStyle="bold" />
+                       </LinearLayout>
+
+
+                        <!-- Timer Display -->
+
+                        <!-- Status Text -->
+
+
+
+                    </LinearLayout>
+
+                    <ImageButton
+                        android:id="@+id/btntRightArrow"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="10dp"
+                        android:alpha="0.7"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:contentDescription="Edit this education"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/ic_right_arrow"
+                        app:layout_constraintBottom_toBottomOf="@+id/linearLayout12"
+                        app:layout_constraintEnd_toEndOf="@+id/linearLayout12"
+                        app:layout_constraintHorizontal_bias="1.0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
