--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,6 +5,7 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="background">@color/background_color_light</item>
+        <item name="android:textColor">#212121</item>
     </style>
 
     <style name="Theme.BDApps" parent="Base.Theme.BDApps" >
